tests/snapshots/r#mod__simulation_test__listing_0048_ip_register-4.snap
---
source: tests/simulation_test.rs
expression: store.flag_register_store().flag_register_memory_map()
---
[
    (
        "carry",
        true,
    ),
    (
        "parity",
        false,
    ),
    (
        "auxiliaryCarry",
        false,
    ),
    (
        "zero",
        false,
    ),
    (
        "sign",
        true,
    ),
    (
        "trap",
        false,
    ),
    (
        "interrupt",
        false,
    ),
    (
        "direction",
        false,
    ),
    (
        "overflow",
        false,
    ),
]
