tests/snapshots/r#mod__simulation_test__listing_0050_challenge_jumps-2.snap
---
source: tests/simulation_test.rs
expression: store.register_store().register_memory_map()
---
[
    (
        "ax",
        13,
    ),
    (
        "bx",
        -5,
    ),
    (
        "cx",
        0,
    ),
    (
        "dx",
        0,
    ),
    (
        "sp",
        0,
    ),
    (
        "bp",
        0,
    ),
    (
        "si",
        0,
    ),
    (
        "di",
        0,
    ),
]
