tests/snapshots/r#mod__simulation_test__listing_0051_memory_mov-2.snap
---
source: tests/simulation_test.rs
expression: store.register_store().register_memory_map()
---
[
    (
        "ax",
        0,
    ),
    (
        "bx",
        1,
    ),
    (
        "cx",
        2,
    ),
    (
        "dx",
        10,
    ),
    (
        "sp",
        0,
    ),
    (
        "bp",
        4,
    ),
    (
        "si",
        0,
    ),
    (
        "di",
        0,
    ),
]
