tests/snapshots/r#mod__simulation_test__listing_0056_estimating_cycles-4.snap
---
source: tests/simulation_test.rs
expression: store.flag_register_store().flag_register_memory_map()
---
[
    (
        "carry",
        false,
    ),
    (
        "parity",
        false,
    ),
    (
        "auxiliaryCarry",
        false,
    ),
    (
        "zero",
        false,
    ),
    (
        "sign",
        false,
    ),
    (
        "trap",
        false,
    ),
    (
        "interrupt",
        false,
    ),
    (
        "direction",
        false,
    ),
    (
        "overflow",
        false,
    ),
]
